# genetic-alghoritm

./: .gitignore  CMakeLists.txt  README.md
Header Files/: GeneticAlgorithm.h  Solution.h  Utils.h
Source Files/: GeneticAlgorithm.cpp  GeneticAlgorithmTest.cpp  Solution.cpp  Utils.cpp
